tests/parsing/smtlib/v2.7/errors/001_identifier_index_2.smt2
(set-logic ALL)
(assert (as (as) bar))
